examples/errors/undeclared_var.olang
Program: Main

class Main is
    this() is
        var a : Integer
        a := Integer(5)
        c := a.Plus(b)
    end
end